# actor-framework

./: CMakeLists.txt  configure
examples/: CMakeLists.txt  aout.cpp
examples/brokers/: simple_http_broker.cpp
examples/curl/: curl_fuse.cpp
examples/message_passing/: dancing_kirby.cpp  dining_philosophers.cpp  typed_calculator.cpp
libcaf_core/: CMakeLists.txt
libcaf_core/caf/: abstract_actor.hpp  abstract_channel.hpp  actor.hpp  actor_addr.hpp  actor_companion.hpp  anything.hpp  behavior_policy.hpp  blocking_actor.hpp  check_typed_input.hpp  config.hpp  fwd.hpp  local_actor.hpp  locks.hpp  mailbox_element.hpp  match_expr.hpp  message.hpp  none.hpp  on.hpp  optional.hpp  scheduler.hpp  set_scheduler.hpp  spawn.hpp  uniform_type_info.hpp  unit.hpp  wildcard_position.hpp
libcaf_core/cppa/: cow_tuple.hpp  tuple_cast.hpp
libcaf_core/src/: abstract_actor.cpp  abstract_channel.cpp  abstract_coordinator.cpp  actor_addr.cpp  actor_companion.cpp  actor_namespace.cpp  actor_proxy.cpp  actor_registry.cpp  behavior_impl.cpp  decorated_tuple.cpp  default_attachable.cpp  default_mailbox_element.cpp  demangle.cpp  exception.cpp  forwarding_actor_proxy.cpp  get_mac_addresses.cpp  get_root_uuid.cpp  group_manager.cpp  local_actor.cpp  logging.cpp  mailbox_element.cpp  mailbox_element_disposer.cpp  memory.cpp  message.cpp  message_builder.cpp  response_promise.cpp  shared_spinlock.cpp  singletons.cpp  sync_request_bouncer.cpp  uniform_type_info_map.cpp
libcaf_io/src/: basp_broker.cpp  broker.cpp  default_multiplexer.cpp  middleman.cpp  publish.cpp
test/: main.cpp
test/framework/: color.hpp  (+2 more)
test/unit/: CMakeLists.txt  main.cpp
test/unit/framework/: README.md  unit.cpp  unit.hpp
test/unit/tests/: example.cpp  ping_pong.cpp
unit_testing/: CMakeLists.txt  test_local_group.cpp  test_remote_actor.cpp  test_spawn.cpp  test_typed_remote_actor.cpp  test_typed_spawn.cpp  test_uniform_type.cpp  test_unpublish.cpp
(+45 files in other folders)
